--- a/src/target parsing.ipynb
+++ b/src/target parsing.ipynb
@@ -2,25 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup as BS\n",
     "import pandas as pd, numpy as np\n",
-    "import urllib\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium import webdriver\n",
-    "import time, re\n",
-    "#import requests\n",
-    "#from selenium import ...\n",
-    "\n"
+    "import time, re\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +60,50 @@
     "            'review_helpful_votes':('div',{'class':'h-text-sm h-margin-v-tight h-text-grayDark'}),\n",
     "            'verified_purchaser':('span',{'review-card--verified-purchaser'})\n",
     "        }\n",
+    "    },\n",
+    "    'bestbuy':{\n",
+    "        'product_data':{\n",
+    "            'product_title':\"//h1[@class:'heading-5 v-fw-regular']\",\n",
+    "            'product_details':\"//div[@class:'overflow-scroll-wrapper']\",\n",
+    "            'product_specs':\"//div[@class:'overflow-scroll-wrapper']\"\n",
+    "        },\n",
+    "        'product_expand':{\n",
+    "            'product_desc':\"//button:[@class=c-button-unstyled features-drawer-btn w-full flex justify-content-between align-items-center py-200]\",\n",
+    "            'product_specs':\"//button[@class='c-button c-button-outline c-button-md show-full-specs-btn col-xs-6']\"\n",
+    "        },\n",
+    "        'navigation':{\n",
+    "            'reviews':\"//a[@data-track='See All Customer Reviews']\",\n",
+    "            'review_links':\"//ul[@class='pagination ugc body-copy-lg']\", #navigate to other pages.\n",
+    "        },\n",
+    "        'review_summary':[\n",
+    "\n",
+    "        ],\n",
+    "        'review_data':{\n",
+    "            'review_header':('h4',{'class':'c-section-title review-title heading-5 v-fw-medium'}),\n",
+    "            'reviewer_name':('div',{'class':'ugc-author v-fw-medium body-copy-lg'}),\n",
+    "            'review_content':('div',{'class':'ugc-review-body'}),\n",
+    "            'review_star_rating':('p',{'class':'visually-hidden'}),\n",
+    "            'review_helpful_votes':('button',{'data-track':'Helpful'}),\n",
+    "            'verified_purchaser':('div',{'class':'verified-purchaser-mv-wrapper'}),\n",
+    "            'promo_consideration?':('div',{'class':'body-copy-sm pt-50'})\n",
+    "        }\n",
+    "    },\n",
+    "    'amazon':{\n",
+    "        'product_data':{\n",
+    "\n",
+    "        },\n",
+    "        'product_expand':{\n",
+    "            \n",
+    "        },\n",
+    "        'navigation':{\n",
+    "\n",
+    "        },\n",
+    "        'review_summary':[\n",
+    "            \n",
+    "        ],\n",
+    "        'review_data':{\n",
+    "\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
@@ -79,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,19 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "products = pd.DataFrame(product_records)\n",
     "reviews = pd.DataFrame(review_records)\n",
-    "products.to_csv('../data/target_products.csv',index=False)\n",
-    "reviews.to_csv('../data/target_reviews.csv',index=False)"
+    "#products.to_csv('../data/target_products.csv',index=False)\n",
+    "#reviews.to_csv('../data/target_reviews.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +267,7 @@
        "      <td>Highlights\\n15.0oz. bag of DORITOS Nacho Chees...</td>\n",
        "      <td>Contains: Milk\\nState of Readiness: Ready to E...</td>\n",
        "      <td>4.8</td>\n",
-       "      <td>2604 star ratings</td>\n",
+       "      <td>2610 star ratings</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -260,11 +300,11 @@
        "1  Dimensions (Overall): 30 Inches (H) x 42.67 In...               4.5   \n",
        "\n",
        "    total_star_votes  \n",
-       "0  2604 star ratings  \n",
+       "0  2610 star ratings  \n",
        "1   490 star ratings  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,152 +315,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>review_header</th>\n",
-       "      <th>reviewer_name</th>\n",
-       "      <th>review_content</th>\n",
-       "      <th>review_star_rating</th>\n",
-       "      <th>review_helpful_votes</th>\n",
-       "      <th>verified_purchaser</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.target.com/p/doritos-nacho-cheese-...</td>\n",
-       "      <td>Doritos</td>\n",
-       "      <td>Hey Human</td>\n",
-       "      <td>Never disappoints and old classic.</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.target.com/p/doritos-nacho-cheese-...</td>\n",
-       "      <td>Old chips given</td>\n",
-       "      <td>Renee</td>\n",
-       "      <td>These were stale and freshness was not guarant...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.target.com/p/doritos-nacho-cheese-...</td>\n",
-       "      <td>Great snack for school lunch</td>\n",
-       "      <td>mairey02</td>\n",
-       "      <td>My kids love these. They are great for their s...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.target.com/p/doritos-nacho-cheese-...</td>\n",
-       "      <td>Best flavor</td>\n",
-       "      <td>Tokura</td>\n",
-       "      <td>A classic flavor that will be everyone’s favor...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.target.com/p/doritos-nacho-cheese-...</td>\n",
-       "      <td>Yummy</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>Love to eat these with Limon and Tapatio!</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                 url  \\\n",
-       "0  https://www.target.com/p/doritos-nacho-cheese-...   \n",
-       "1  https://www.target.com/p/doritos-nacho-cheese-...   \n",
-       "2  https://www.target.com/p/doritos-nacho-cheese-...   \n",
-       "3  https://www.target.com/p/doritos-nacho-cheese-...   \n",
-       "4  https://www.target.com/p/doritos-nacho-cheese-...   \n",
-       "\n",
-       "                  review_header reviewer_name  \\\n",
-       "0                       Doritos     Hey Human   \n",
-       "1               Old chips given         Renee   \n",
-       "2  Great snack for school lunch      mairey02   \n",
-       "3                   Best flavor        Tokura   \n",
-       "4                         Yummy            CL   \n",
-       "\n",
-       "                                      review_content review_star_rating  \\\n",
-       "0                 Never disappoints and old classic.                  5   \n",
-       "1  These were stale and freshness was not guarant...                  1   \n",
-       "2  My kids love these. They are great for their s...                  5   \n",
-       "3  A classic flavor that will be everyone’s favor...                  5   \n",
-       "4          Love to eat these with Limon and Tapatio!                  5   \n",
-       "\n",
-       "  review_helpful_votes verified_purchaser  \n",
-       "0                    3               None  \n",
-       "1                    6               None  \n",
-       "2                    5               None  \n",
-       "3                    2               None  \n",
-       "4                    5               None  "
+       "522"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews.head()\n"
+    "len(reviews)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.542145593869732"
+       "522"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews['review_star_rating'].astype(int).mean()"
+    "len(reviews)\n",
+    "#reviews = pd.read_csv('../data/target_reviews.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
