BB_all_data commit
BB scraping code updated

--- a/src/Bestbuy_parsing_test.ipynb
+++ b/src/Bestbuy_parsing_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12763,7 +12763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12772,17 +12772,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "driver = webdriver.Chrome(service=s)\n",
+    "driver.get(urls[2])\n",
+    "driver.maximize_window()\n",
+    "reviews_button = driver.find_element(By.LINK_TEXT,'See All Customer Reviews')\n",
+    "reviews_button.click()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Superb sound for the price. It’s relatively small, but don’t let that fool you; it packs a big punch. JBL is a great brand for portable Bluetooth speakers. I highly recommend this product.\n",
+      "Jbl flip 5 is superd and the price. The sounds is excellent for my ears. It easy to carry , handy anywhere you go.also perfect the performance of this jbl flip 5\n",
+      "One of the best purchases I’ve ever made. The sound is amazing, very loud and clear. \n",
+      "I had the mini speaker, and decided to buy a bigger one, and I love it.\n",
+      "\"Excellent sound, portability and unity\" \n",
+      "this is my third JBL Portable. Found no need to adventure outside of this pattern of purchases as of yet and it's been 10 years of JBL portables, with the exception of 1 Bose portable *(Decently comparable tbh but JBL is more rugged) Previous two were charge variants (only difference is they can charge your devices) decided there is enough juice to go around. So I opted for this little guy. Still Not disappointed. Plus with the infinity \"secret button\" you can link up tons of other jbl portables to the same source input signal. (app controlled who gets it and first one to initiate the swarm link)\n",
+      "Disclaimer the only difference between the flip 5 and 6 is the 6 can have a universal equalizer that will automatically tune whatever platform you're using. (as long as the platform supports it) that and it has a little hump thingy to help it stop rolling. Cometics are obvious. Definitely recommend. \n",
+      "Hope this helped :p\n",
+      "Speaker is nice and loud, clear, and water proof! It’s so easy to use and the best bang for your buck. I’ve had other portable speakers and the sound from this one is by the far the best. The white is also super CRISP and FRESH! 10/10 A+\n",
+      "This is my favorite brand on portable speakers the sound is terrific i use it bike riding and it fits on the bottle cage is perfect on the go.\n",
+      "Im all into music and this speaker is best For its premium quality, JBL speakers are more practical than its competitors, who offer the same quality and experience\n",
+      "If you want great sound look no further. If you're looking for frills, the previous version may be better for you, however the flip 5 has a better sound. There's no distortion whatsoever when volume is at maximum. The bass is nice, sound crisp, great flavors of colors, small so it can go anywhere with you and it's waterproof. I highly recommend the flip 5. With this baby by your side, you are the party. I'm pretty sure you won't be disappointed, I know I'm not.\n",
+      "Good speaker, writing a review after 2.5years of use.\n",
+      "Nice woofer sound. Each charge will long last almost a day. Fully satisfied with the purchase.\n",
+      "This little speaker packs a punch. We use it with alexa for a better sound while listing to music.  You can feel the sound fill the room. Love it. Very easy to use also!\n",
+      "The audio quality and clarity at both high and low volumes in a speaker this size is impressive given the price.\n",
+      "I love the sound quality, the volume is loud and the color is very beautiful. My battery has lasted a long time\n",
+      "I use this for my room whenever I get ready and the sound quality is super good!\n",
+      "The speaker has a nice design! It’s easy to connect to your smart phone, easy to carry around and it has great sound!!\n",
+      "I love this speaker! The sound quality is awesome! Deep bass sound brings music to life.\n",
+      "This speaker is SO good! This brand has always been one of the best speaker brands I know, so when I saw this product at Best Buy I knew I immediately had to buy it. This is a purchase you will not regret, not only the monetary value but also the fact that it’s such a comfortable speaker to go around with, the battery life is excellent, the volume has such a wide range. I use it to play calming music when I’m studying, so for college students it really is helpful, if you live with a roommate that is noisy this is AMAZING hahahaha!\n",
+      "\n",
+      "* Best Buy College Crew members receive products to write honest, unbiased reviews. Reviewers have been provided products free of charge and may have received nominal compensation.\n",
+      "Great speaker for the size the sound you can hear upstairs and feel the beat.\n",
+      "I was a little nervous about purchasing this speaker. When we received it I thought well that’s kind of small. After syncing it with our phone and playing music on it I was quite impressed. This is perfect portable speaker with great sound...\n",
+      "Bought this speaker to replace an old JBL speaker that finally stopped working after being damaged. Excellent sound, battery life is great so far. Easy to use. Would definitely buy again.\n",
+      "Love this speaker it is perfect for a beach or pool day with kids. Water resistant, nice design, portable, light weight and the most important it has an amaizing sounds quality. I ordered the black color\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = driver.find_element(By.XPATH,'/html/body/div[2]/main/div[1]/div/div/div[1]/div/div/div[3]/div[2]/div/div[1]/div[2]/div/div/div/ul/li[1]/a/div/span[1]').text\n",
+    "\n",
+    "n = driver.find_element(By.XPATH,'/html/body/div[2]/main/div[1]/div/div/div[1]/div/div/div[3]/div[2]/div/div[1]/div[1]/div[1]/div/h2/a').text\n",
+    "\n",
+    "r = driver.find_element(By.XPATH,'/html/body/div[2]/main/div[1]/div/div/div[1]/div/div/div[3]/div[2]/div/div[1]/div[2]/div/div/div/ul/li[1]/a/div/span[2]').text\n",
+    "\n",
+    "x = driver.find_elements(By.CLASS_NAME,'pre-white-space')\n",
+    "for xs in x:\n",
+    "    print(xs.text)"
+   ]
   },
   {
    "cell_type": "code",
